--- a/.github/workflows/test_workflow.yaml
+++ b/.github/workflows/test_workflow.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - name: Get Pokemon name
         # uses: philschmid/blog-custom-github-action@master
-        uses: IvanWooll/AndroidBuildAction@master
+        uses: action.yaml
         id: pokemon
         with:
           pokemon_id: 150
