--- a/.github/workflows/test_workflow.yaml
+++ b/.github/workflows/test_workflow.yaml
@@ -7,7 +7,7 @@ jobs:
      steps: 
      - uses: actions/checkout@v1
      - name: My first step
-       uses: ./.github/actions/action
+       uses: ./.github/actions
 
 # on: [push]
 
