--- a/.github/actions/action.yaml
+++ b/.github/actions/action.yaml
@@ -12,5 +12,5 @@ outputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
-  args:
-    - ${{ inputs.pokemon_id}}
+    - run: |
+      echo "${{inputs.pokemon_id}}"
