--- a/.github/workflows/test_workflow.yaml
+++ b/.github/workflows/test_workflow.yaml
@@ -8,6 +8,9 @@ jobs:
      - uses: actions/checkout@v1
      - name: My first step
        uses: ./.github/actions
+        with:
+          pokemon_id: 12
+
 
 # on: [push]
 
