--- a/.github/actions/action.yaml
+++ b/.github/actions/action.yaml
@@ -12,4 +12,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - run: |
-        echo "Log level: ${{ github.event.inputs.pokemon_id }}"
+        echo "Log level: ${{ inputs.pokemon_id }}"
